--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración contínua: Madurez y Productividad en el Desarrollo de Software </li>
+         <li>Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
 </body>
 </html>
