--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
          <li> Ansible </li>
          <li> Integración contínua: Madurez y Productividad en el Desarrollo de Software </li>
          <li>Kubernetes: Introducción a la orquestación de containers</li>
+         <li>Mi propio curso de prueba</li>
      </ul>
 </body>
 </html>
