Modificando el  nombre del curso de Ansible

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 <body>
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales </li>
-         <li> Docker </li>
-         <li> Ansible </li>
+         <li> Docker: Creando containers sin dolor de cabeza</li>
+         <li> Ansible: Su infraestructura como Código</li>
          <li> Integración contínua: Madurez y Productividad en el Desarrollo de Software </li>
-         <li>Kubernetes: Introducción a la orquestación de containers</li>
-         <li>Mi propio curso de prueba</li>
+         <li> Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
 </body>
 </html>
